# gibb.eri.sh

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CNAME  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  index.html
.cargo/: config.toml
.github/workflows/: docs.yml  release.yml
apps/desktop/: index.html  package-lock.json  package.json
apps/desktop/src/: App.tsx  index.css
apps/desktop/src-tauri/: Cargo.toml  Entitlements.plist  build.rs  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
crates/application/: Cargo.toml
crates/application/src/: constants.rs  lib.rs  streaming.rs  transcription.rs
crates/audio/: Cargo.toml
crates/audio/src/: device.rs  lib.rs  recorder.rs  speaker.rs  stream.rs
crates/bus/: Cargo.toml
crates/bus/src/: lib.rs
crates/context/: Cargo.toml
crates/context/examples/: poll_context.rs
crates/context/src/: lib.rs  limits.rs  mode.rs  poller.rs  provider.rs  state.rs
crates/context/src/platform/: macos.rs  mod.rs
crates/detect/: Cargo.toml
crates/detect/src/: lib.rs  list.rs  mic.rs  utils.rs
crates/diarization/: Cargo.toml
crates/events/: Cargo.toml
crates/input/: Cargo.toml
crates/input/src/: controller.rs  error.rs  lib.rs  macos.rs  panic_hotkey.rs
crates/models/: Cargo.toml
crates/parakeet/: Cargo.toml
crates/sherpa/: Cargo.toml
crates/sherpa/src/: lib.rs  loader.rs  nemo_ctc.rs  whisper.rs  worker.rs
crates/skills/: Cargo.toml
crates/skills/src/: error.rs  executor.rs  lib.rs  parser.rs  types.rs
crates/skills/tests/: bundled_skills.rs
crates/smart-turn/: Cargo.toml
crates/storage/: Cargo.toml
crates/storage/src/: lib.rs
crates/storage/tests/: integration.rs
crates/stt/: Cargo.toml
crates/transcript/: Cargo.toml
crates/turn/: Cargo.toml
crates/vad/: Cargo.toml
docs/: GOLDEN_PATH.md  SKILL_SPEC.md  book.toml  tool-packs-spec.md
docs/src/: SUMMARY.md  clean-architecture.md  introduction.md
plugins/detect/: Cargo.toml  build.rs
plugins/detect/permissions/autogenerated/: reference.md
plugins/detect/permissions/autogenerated/commands/: list_default_ignored_bundle_ids.toml  list_installed_applications.toml  list_mic_using_applications.toml  set_ignored_bundle_ids.toml
plugins/detect/permissions/schemas/: schema.json
plugins/detect/src/: commands.rs  events.rs  handler.rs  lib.rs
plugins/permissions/: Cargo.toml  build.rs
plugins/permissions/permissions/autogenerated/: reference.md
plugins/permissions/permissions/autogenerated/commands/: check_microphone.toml  is_screen_capture_available.toml  request_microphone.toml
plugins/permissions/permissions/schemas/: schema.json
plugins/permissions/src/: lib.rs
plugins/recorder/: Cargo.toml  build.rs
plugins/recorder/permissions/autogenerated/: reference.md
plugins/recorder/permissions/autogenerated/commands/: get_recording_state.toml  has_virtual_device.toml  list_audio_devices.toml  promote_to_recording.toml
plugins/recorder/permissions/schemas/: schema.json
plugins/recorder/src/: lib.rs
plugins/stt-worker/: Cargo.toml  build.rs
plugins/stt-worker/permissions/autogenerated/: reference.md
plugins/stt-worker/permissions/autogenerated/commands/: cancel_download.toml  cancel_turn_download.toml  download_turn_model.toml  get_current_turn_model.toml  get_language.toml  get_streaming_buffer_duration.toml  get_turn_settings.toml  is_downloading.toml  is_turn_downloading.toml  list_turn_models.toml  load_turn_model.toml  reset_streaming_buffer.toml  save_session.toml  search_sessions.toml  set_language.toml  set_turn_settings.toml  stt_get_pipeline_status.toml  stt_is_listening.toml  stt_start_listening.toml  stt_stop_listening.toml  transcribe_audio.toml  transcribe_file.toml  transcribe_streaming_chunk.toml  unload_turn_model.toml  update_session_title.toml
plugins/stt-worker/permissions/schemas/: schema.json
plugins/stt-worker/src/: audio_listener.rs  batch_transcriber.rs  commands.rs  download_tracker.rs  dto.rs  error.rs  lib.rs  state.rs  turn_listener.rs
plugins/stt-worker/src/commands/: listener.rs  mod.rs  model.rs  session.rs  transcription.rs  turn.rs
plugins/stt-worker/src/services/: mod.rs  model_service.rs
plugins/tools/: Cargo.toml  build.rs
plugins/tools/examples/: inspect_functiongemma.rs  run_functiongemma_once.rs
plugins/tools/permissions/autogenerated/: reference.md
plugins/tools/permissions/autogenerated/commands/: cancel_functiongemma_download.toml  check_input_access.toml  download_functiongemma_model.toml  get_action_router_settings.toml  get_context.toml  get_current_functiongemma_model.toml  get_functiongemma_status.toml  list_functiongemma_models.toml  load_functiongemma.toml  load_functiongemma_model.toml  pin_context_mode.toml  request_input_access.toml  set_action_router_settings.toml  unload_functiongemma_model.toml  unpin_context_mode.toml  wikipedia_city_lookup.toml
plugins/tools/permissions/schemas/: schema.json
plugins/tools/src/: commands.rs  context_injector.rs  deictic.rs  environment.rs  error.rs  executor.rs  functiongemma.rs  functiongemma_download.rs  functiongemma_models.rs  inference.rs  lib.rs  parser.rs  pipeline.rs  policy.rs  prompt_builder.rs  registry.rs  router.rs  router_logic.rs  skill_loader.rs  skill_tool.rs  skill_watcher.rs  state.rs  tool_manifest.rs  tool_pack.rs  tool_pack_loader.rs  wikipedia.rs
plugins/tools/src/adapters/: clipboard.rs  event_bus.rs  focus.rs  mod.rs
plugins/tools/src/commands/: context.rs  functiongemma.rs  input.rs  mod.rs  router.rs  skills.rs  tool_packs.rs  wikipedia.rs
plugins/tools/src/state/: cache.rs  functiongemma.rs  mod.rs  router.rs
plugins/tools/src/tools/: add_todo.rs  app_launcher.rs  file_finder.rs  git_voice.rs  help.rs  mod.rs  paste.rs  system_control.rs  transcript_marker.rs  typer.rs  web_search.rs  wikipedia.rs
plugins/tray/: Cargo.toml  build.rs
plugins/tray/src/: lib.rs
scripts/: README.md  export_nemo_ctc.py
skills/files/: SKILL.md
skills/git/: SKILL.md
skills/summarize/: SKILL.md
tools/: summarize.tool.json
(+88 files in other folders)
