[package]
name = "gibberish-context"
version.workspace = true
edition.workspace = true

[dependencies]
tracing.workspace = true
serde = { workspace = true, features = ["derive"] }
chrono.workspace = true

# Re-export detect crate for mic status
gibberish-detect = { path = "../detect" }

[target.'cfg(target_os = "macos")'.dependencies]
# For active window detection via NSWorkspace
objc.workspace = true

[dev-dependencies]
tracing-subscriber = { workspace = true }
