[package]
name = "gibberish-detect"
version.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace = true
tracing.workspace = true
serde = { workspace = true, features = ["derive"] }
specta = { workspace = true, features = ["derive"] }

[target.'cfg(target_os = "macos")'.dependencies]
cidre.workspace = true
sysinfo.workspace = true
plist.workspace = true
