[package]
name = "gibberish-input"
version.workspace = true
edition.workspace = true
description = "Input emulation (typing, key sequences) for gibb.eri.sh"

[dependencies]
tracing.workspace = true
thiserror.workspace = true

# Input simulation
enigo = "0.2"

# Global key event listening (for panic hotkey)
rdev = "0.5"
