[package]
name = "gibberish-input"
version.workspace = true
edition.workspace = true
description = "Input emulation (typing, key sequences) for gibb.eri.sh"

[dependencies]
tracing.workspace = true
thiserror.workspace = true

# Input simulation
enigo = "0.2"

# Global key event listening (polling safe alternative to rdev)
device_query = "2.1"

# Clipboard access (for paste-to-type with clipboard restore)
arboard = "3.4"
