[package]
name = "gibberish-skills"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "SKILL.md parser and executor for user-defined tools"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "1.0"
tracing = "0.1"
regex = "1.10"
tokio = { version = "1", features = ["process", "time", "sync", "io-util"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
