[package]
name = "gibberish-storage"
version.workspace = true
edition.workspace = true

[dependencies]
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true
gibberish-transcript.workspace = true
gibberish-events = { path = "../events" }
