[package]
name = "tauri-plugin-gibberish-recorder"
version.workspace = true
edition.workspace = true
links = "tauri-plugin-gibberish-recorder"

[build-dependencies]
tauri-plugin = { workspace = true, features = ["build"] }

[dependencies]
tauri.workspace = true
tauri-plugin.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tokio.workspace = true
chrono.workspace = true
gibberish-audio.workspace = true
gibberish-bus.workspace = true
crossbeam-channel.workspace = true
