[package]
name = "tauri-plugin-gibberish-tools"
version.workspace = true
edition.workspace = true
links = "tauri-plugin-gibberish-tools"

[build-dependencies]
tauri-plugin = { workspace = true, features = ["build"] }

[dependencies]
tauri.workspace = true
tauri-plugin.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
reqwest = { workspace = true, features = ["stream"] }
thiserror.workspace = true
ort = { workspace = true, features = ["half"] }
tokenizers = "0.22"
chrono.workspace = true
futures.workspace = true
tokio-util = "0.7"
half = "2"
