[package]
name = "tauri-plugin-gibberish-tools"
version.workspace = true
edition.workspace = true
links = "tauri-plugin-gibberish-tools"

[build-dependencies]
tauri-plugin = { workspace = true, features = ["build"] }

[dependencies]
tauri.workspace = true
tauri-plugin.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
reqwest = { workspace = true, features = ["stream"] }
thiserror.workspace = true
ort = { workspace = true, features = ["half"] }
tokenizers = "0.22"
chrono.workspace = true
futures.workspace = true
gibberish-context.workspace = true
gibberish-events.workspace = true
gibberish-input.workspace = true
tokio-util.workspace = true
half = "2"
async-trait.workspace = true
dirs.workspace = true
arboard.workspace = true
