[package]
name = "tauri-plugin-gibberish-tray"
version.workspace = true
edition.workspace = true
links = "tauri-plugin-gibberish-tray"

[build-dependencies]
tauri-plugin = { workspace = true, features = ["build"] }

[dependencies]
tauri = { workspace = true, features = ["tray-icon"] }
tauri-plugin.workspace = true
tauri-plugin-positioner.workspace = true
serde.workspace = true
tracing.workspace = true
