[package]
name = "gibberish-desktop"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build.workspace = true

[dependencies]
tauri = { workspace = true, features = ["macos-private-api", "tray-icon"] }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

gibberish-audio.workspace = true
gibberish-stt.workspace = true
gibberish-vad.workspace = true
gibberish-transcript.workspace = true
gibberish-models.workspace = true
gibberish-storage.workspace = true
gibberish-bus.workspace = true

tauri-plugin-gibberish-tray.workspace = true
tauri-plugin-gibberish-recorder.workspace = true
tauri-plugin-gibberish-stt.workspace = true
tauri-plugin-gibberish-permissions.workspace = true
tauri-plugin-gibberish-detect.workspace = true
tauri-plugin-gibberish-tools.workspace = true
tauri-plugin-dialog.workspace = true
tauri-plugin-fs.workspace = true
